# fast-api-starter

./: .gitignore  README.md  pyproject.toml
src/fast_api_complete/: ecommerce.py  main.py  path.py
src/fast_api_complete/supportive_functions/data/: product.json  user.json
