[project]
name = "fast-api-complete"
version = "0.1.0"
description = ""
authors = [
    {name = "jhm16",email = "saurabhsolkar4@gamil.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [{include = "fast_api_complete", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
